--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
   <title>Smart Home Dashboard - Login</title>
   <!-- Import MQTT library -->
   <script src="https://unpkg.com/mqtt/dist/mqtt.min.js"></script>
