--- a/index.html
+++ b/index.html
@@ -56,22 +56,25 @@
     }
     /* Logout button */
     #logout-container {
-      position: absolute;
-      top: 20px;
-      left: 20px;
+    text-align: center;
+    margin-top: 20px; /* Espacement avec les blocs */
     }
+
     #logout-container button {
-      padding: 8px 16px;
-      font-size: 0.9rem;
-      border: none;
-      border-radius: 4px;
-      background: #333;
-      color: #fff;
-      cursor: pointer;
+        padding: 10px 20px;
+        font-size: 1rem;
+        border: none;
+        border-radius: 4px;
+        background: #333;
+        color: #fff;
+        cursor: pointer;  
+        transition: background 0.2s ease;
     }
+
     #logout-container button:hover {
-      background: #555;
+        background: #555;
     }
+
     /* Dashboard (tabs) */
     #dashboard-container {
       width: 100%;
@@ -133,10 +136,7 @@
   
   <!-- Dashboard (hidden by default) -->
   <div id="dashboard-container" style="display: none;">
-    <!-- Logout Button (top left) -->
-    <div id="logout-container">
-      <button onclick="logout()">Logout</button>
-    </div>
+
     <h1>Smart Home Dashboard - PFE</h1>
     <nav class="tabs">
       <button class="tab-btn active" onclick="showTab('tab-temp')">Temperature</button>
@@ -187,6 +187,10 @@
       <button onclick="closeDoor()">Close</button>
     </section>
     
+    <div id="logout-container">
+      <button onclick="logout()">Logout</button>
+    </div>
+
     <footer>
       &copy; 2025 - Ernouf & Guedj
     </footer>
