--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
     /************************************
      * MQTT Configuration and Dashboard Logic
      ************************************/
-    const brokerURL = "wss://192.168.115.126:8081/mqtt";
+    const brokerURL = "wss://test.mosquitto.org:8081/mqtt";
     const client = mqtt.connect(brokerURL);
 
     // MQTT Topics
