--- a/index.html
+++ b/index.html
@@ -81,6 +81,7 @@
     }
     .tabs {
       display: flex;
+      justify-content: center; /* Permet de centrer les boutons */
       gap: 10px;
       margin-bottom: 20px;
     }
