--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
     /************************************
      * MQTT Configuration and Dashboard Logic
      ************************************/
-    const brokerURL = "wss://test.mosquitto.org:8081/mqtt";
+    const brokerURL = "wss://public.mqttserver.eu:8081";
     const client = mqtt.connect(brokerURL);
 
     // MQTT Topics
